--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "predeploy": "expo build:web",
+    "deploy": "gh-pages -d web-build"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.0",
@@ -24,7 +26,9 @@
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "gh-pages": "^3.2.3",
     "typescript": "~4.0.0"
   },
-  "private": true
+  "private": true,
+  "homepage": "https://castrors.github.io/pocket_gym"
 }
