--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "expo-google-fonts": "^0.0.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react-dom": "^17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-paper": "^4.9.2",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "^0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "babel-plugin-react-native-web": "^0.17.1",
     "gh-pages": "^3.2.3",
     "typescript": "~4.0.0"
   },
