--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,22 @@
   "background_color": "#ffffff",
   "display": "standalone",
   "lang": "en",
-  "name": "pocket_gym",
-  "short_name": "pocket_gym",
+  "name": "Pocket Gym",
+  "short_name": "Pocket Gym",
   "start_url": "/?utm_source=web_app_manifest",
   "orientation": "portrait",
+  "related_applications": [
+    {
+      "platform": "itunes",
+      "id": "ninja.rodrigocastro.pocketgym"
+    },
+    {
+      "platform": "play",
+      "url": "http://play.google.com/store/apps/details?id=ninja.rodrigocastro.pocketgym",
+      "id": "ninja.rodrigocastro.pocketgym"
+    }
+  ],
+  "prefer_related_applications": true,
   "icons": [
     {
       "src": "/pocket_gym/pwa/chrome-icon/chrome-icon-144.png",
